Bug 360437 - nsITypeAheadFind: get rid of aHasFocus argument. r=masayuki,gavin.